--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^3.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "^2.7.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "mongodb": "^3.3.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mysql2": "^2.0.0",
+    "sequelize": "^5.21.2",
+    "uuid": "^3.3.3"
   }
 }
